[gd_scene load_steps=4 format=3 uid="uid://battle_summary"]

[ext_resource type="Script" path="res://scripts/battle/battle_summary.gd" id="1_script"]
[ext_resource type="Shader" path="res://shaders/blur.gdshader" id="2_blur"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_blur"]
shader = ExtResource("2_blur")
shader_parameter/blur_amount = 0.0

[node name="BattleSummary" type="CanvasLayer"]
layer = 50
script = ExtResource("1_script")

[node name="BlurRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_blur")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.3)

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -300.0
offset_right = 500.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(500, 300)

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ResultLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.2, 1)
theme_override_colors/font_outline_color = Color(0.2, 0.1, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 48
text = "VICTORY!"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="TeamsContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 40
alignment = 1

[node name="PlayerTeamContainer" type="VBoxContainer" parent="Panel/VBoxContainer/TeamsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="TeamLabel" type="Label" parent="Panel/VBoxContainer/TeamsContainer/PlayerTeamContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.8, 1, 1)
theme_override_font_sizes/font_size = 20
text = "YOUR TEAM"
horizontal_alignment = 1

[node name="HeroesContainer" type="HBoxContainer" parent="Panel/VBoxContainer/TeamsContainer/PlayerTeamContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10
alignment = 1

[node name="VSLabel" type="Label" parent="Panel/VBoxContainer/TeamsContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(1, 1, 1, 0.5)
theme_override_font_sizes/font_size = 32
text = "VS"
vertical_alignment = 1

[node name="EnemyTeamContainer" type="VBoxContainer" parent="Panel/VBoxContainer/TeamsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="TeamLabel" type="Label" parent="Panel/VBoxContainer/TeamsContainer/EnemyTeamContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.4, 0.4, 1)
theme_override_font_sizes/font_size = 20
text = "ENEMY TEAM"
horizontal_alignment = 1

[node name="HeroesContainer" type="HBoxContainer" parent="Panel/VBoxContainer/TeamsContainer/EnemyTeamContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10
alignment = 1

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="StatsContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="WinsLabel" type="Label" parent="Panel/VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 1, 0.4, 1)
theme_override_font_sizes/font_size = 16
text = "Wins: 0"

[node name="LossesLabel" type="Label" parent="Panel/VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.4, 0.4, 1)
theme_override_font_sizes/font_size = 16
text = "Losses: 0"

[node name="WinRateLabel" type="Label" parent="Panel/VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.2, 1)
theme_override_font_sizes/font_size = 16
text = "Win Rate: 0%"

[node name="StreakLabel" type="Label" parent="Panel/VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.8, 1, 1)
theme_override_font_sizes/font_size = 16
text = "Streak: 0"

[node name="CountdownLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 16
text = "Returning in 10s..."
horizontal_alignment = 1

[node name="ContinueButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "  DASHBOARD  "
